# PrImpact

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pr-impact.yml
ci/: gitlab-ci-template.yml
design/stitch_primpact_web_ui/primpact_blast_radius_analysis/: code.html
design/stitch_primpact_web_ui/primpact_dashboard/: code.html
design/stitch_primpact_web_ui/primpact_dependency_shift_analysis/: code.html
design/stitch_primpact_web_ui/primpact_global_impact_trees/: code.html
design/stitch_primpact_web_ui/primpact_impact_report_22/: code.html
design/stitch_primpact_web_ui/primpact_security_anomalies/: code.html
design/stitch_primpact_web_ui/primpact_test_gaps/: code.html
design/stitch_primpact_web_ui/terminal_velocity/: DESIGN.md
docs/: pr-impact-design.md  primpact-architecture.md  primpact-roadmap.md  primpact-v1-plan.md  primpact-web-architecture.md  primpact-web-ui-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BlastRadiusGraph.test.tsx  BlastRadiusGraph.tsx  CodeBlock.tsx  Layout.tsx  ProtectedRoute.tsx  SparkLine.tsx  StatusChip.tsx  TabBar.tsx
frontend/src/context/: ActiveRunContext.tsx
frontend/src/lib/: AuthContext.tsx  api.test.ts  api.ts  formatters.ts  queryKeys.ts  types.ts
frontend/src/screens/: Dashboard.tsx  History.tsx  Login.tsx  Report.test.tsx  Report.tsx  Settings.test.tsx  Settings.tsx
frontend/src/screens/tabs/: AnomaliesTab.tsx  BlastRadiusTab.test.tsx  BlastRadiusTab.tsx  DependenciesTab.tsx  SecurityTab.test.tsx  SecurityTab.tsx  SummaryTab.tsx  TestGapsTab.tsx
pr_impact/: ai_client.py  ai_context.py  ai_layer.py  analyzer.py  ast_extractor.py  classifier.py  cli.py  config.py  config_file.py  dependency_graph.py  git_analysis.py  github.py  history.py  language_resolvers.py  models.py  prompts.py  reporter.py  security.py  utils.py  webhook.py
pr_impact/web/: auth.py  server.py
pr_impact/web/api/: analyse.py  annotations.py  auth_routes.py  config.py  runs.py  snippet.py  webhook.py
pr_impact/web/static/: index.html
pr_impact/web/static/assets/: AnomaliesTab-CGJ-9vAz.js  (+34 more)
tests/: conftest.py  helpers.py  test_ai_layer.py  test_analyzer.py  test_api_annotations.py  test_api_config.py  test_api_runs.py  test_api_snippet.py  test_architecture.py  test_ast_extractor.py  test_classifier.py  test_cli.py  test_config_file.py  test_dependency_graph.py  test_git_analysis.py  test_github.py  test_history.py  test_history_runs.py  test_models.py  test_prompts.py  test_reporter.py  test_security.py  test_utils.py  test_webhook.py
